<resources>
    <string name="app_name">Личный дневник</string>
    <string name="title_hint">Заголовок</string>
    <string name="message_hint">Напишите текст заметки</string>
    <string name="your_notes">Личный дневник</string>
    <string name="delete_question">Вы уверены, что хотите удалить заметку?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="tag1_hint">Тег 1</string>
    <string name="tag2_hint">Тег 2</string>
    <string name="choose_tag">Выберите тег для фильтрации</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>