<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.notesapp.ui.EditNoteFragment">

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:hint="@string/title_hint"
        android:textColorHint="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:hint="@string/message_hint"
        android:textColorHint="@color/gray"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/titleInput" />

    <EditText
        android:id="@+id/tag1Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:hint="@string/tag1_hint"
        android:textColorHint="@color/gray"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/messageInput" />

    <EditText
        android:id="@+id/tag2Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:hint="@string/tag2_hint"
        android:textColorHint="@color/gray"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tag1Input" />

    <ImageButton
        android:id="@+id/acceptButton"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:background="@drawable/edit_button"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>