<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FilterFragment">

    <TextView
        android:id="@+id/chooseFieldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/choose_tag"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tag1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/tag1_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseFieldText" />

    <ImageView
        android:id="@+id/forward1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/forward_icon"
        app:layout_constraintStart_toEndOf="@id/tag1"
        app:layout_constraintTop_toBottomOf="@id/chooseFieldText" />

    <EditText
        android:id="@+id/tag2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/tag2_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag1" />

    <ImageView
        android:id="@+id/forward2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/forward_icon"
        app:layout_constraintStart_toEndOf="@id/tag1"
        app:layout_constraintTop_toBottomOf="@id/tag1" />

</androidx.constraintlayout.widget.ConstraintLayout>